--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
     <p>Billie Eilish wrote the song called “What Was I Made For?”. This song from Barbie the album won the Academy award for best music (original song), Grammy award for a song of the year, a golden globe award for best original song and more.
     The Barbie movie was the highest grossing movie of 2023. 
     Barbie was the first live action movie based on a Barbie doll. </p>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.scotsman.com%2Farts-and-culture%2Ffilm-and-tv%2Fevery-barbie-cast-member-4231123&psig=AOvVaw2d2u6jsLf9IxsWXtShkT5K&ust=1738013439426000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOCclOOqlIsDFQAAAAAdAAAAABAQ" alt="Baerbie Cast">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.scotsman.com%2Farts-and-culture%2Ffilm-and-tv%2Fevery-barbie-cast-member-4231123&psig=AOvVaw2d2u6jsLf9IxsWXtShkT5K&ust=1738013439426000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOCclOOqlIsDFQAAAAAdAAAAABAQ" alt="Barbie Cast">
     <h3>Characters</h3>
     <ul>
         <li><a href="https://www.imdb.com/name/nm3053338/" target ="_blank"></a>Barbie- Margot Robbie</li>
