--- a/intro_to_html/index.html
+++ b/intro_to_html/index.html
@@ -27,14 +27,14 @@
     <p>Billie Eilish wrote the song called “What Was I Made For?”. This song from Barbie the album won the Academy award for best music (original song), Grammy award for a song of the year, a golden globe award for best original song and more.
     The Barbie movie was the highest grossing movie of 2023. 
     Barbie was the first live action movie based on a Barbie doll. </p>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.scotsman.com%2Farts-and-culture%2Ffilm-and-tv%2Fevery-barbie-cast-member-4231123&psig=AOvVaw2d2u6jsLf9IxsWXtShkT5K&ust=1738013439426000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOCclOOqlIsDFQAAAAAdAAAAABAQ" alt="Barbie Cast">
+    <img src="https://www.scotsman.com/webimg/b25lY21zOjQyNDZlYjRkLWViN2UtNGJlNi1hMWMwLWQ1MmRmNjlhNDNjMDpiZDM2NTEwMS0zMjhiLTQ4ZmEtODZjYS1mYmVhYmQ4MGE4Mjg=.jpg?trim=0,44,0,190&crop=&width=990&quality=65&enable=upscale" alt="Barbie Cast">
     <h3>Characters</h3>
     <ul>
-        <li><a href="https://www.imdb.com/name/nm3053338/" target ="_blank"></a>Barbie- Margot Robbie</li>
-        <li><a href="https://www.imdb.com/name/nm0331516/?ref_=nv_sr_srsg_3_tt_2_nm_6_in_0_q_ryan" target ="_blank"></a>Ken- Ryan Gosling</li>
-        <li><a href="https://www.imdb.com/name/nm1065229/?ref_=nv_sr_srsg_1_tt_2_nm_5_in_0_q_america%2520" target ="_blank"></a>Gloria- America Ferrera</li>
-        <li><a href="https://www.imdb.com/name/nm0002071/?ref_=nv_sr_srsg_0_tt_0_nm_8_in_0_q_will" target ="_blank"></a>Mattel CEO- Will Ferrell</li>
-        <li><a href="https://www.imdb.com/name/nm0571952/?ref_=nv_sr_srsg_0_tt_0_nm_8_in_0_q_kate%2520mc" target ="_blank"></a>Weird Barbie- Kate McKinnon</li>
+        <li><a href="https://www.imdb.com/name/nm3053338/" target ="_blank">Barbie- Margot Robbie</a></li>
+        <li><a href="https://www.imdb.com/name/nm0331516/?ref_=nv_sr_srsg_3_tt_2_nm_6_in_0_q_ryan" target ="_blank">Ken- Ryan Gosling</a></li>
+        <li><a href="https://www.imdb.com/name/nm1065229/?ref_=nv_sr_srsg_1_tt_2_nm_5_in_0_q_america%2520" target ="_blank">Gloria- America Ferrera</a></li>
+        <li><a href="https://www.imdb.com/name/nm0002071/?ref_=nv_sr_srsg_0_tt_0_nm_8_in_0_q_will" target ="_blank">Mattel CEO- Will Ferrell</a></li>
+        <li><a href="https://www.imdb.com/name/nm0571952/?ref_=nv_sr_srsg_0_tt_0_nm_8_in_0_q_kate%2520mc" target ="_blank">Weird Barbie- Kate McKinnon</a></li>
     </ul>
     <hr>
     <p>&copy; 2025 Barbie the Movie Project</p>
