--- a/HTML5_intro_to_css/index.html
+++ b/HTML5_intro_to_css/index.html
@@ -15,13 +15,15 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
     </nav>
+    <hr>
     <main>
-        <hi>Welcome to the World of Barbie!</hi>
+        <h1>Welcome to the World of Barbie!</h1>
         <p>Step into the vibrant and dazzling world of the Barbie Movie, where fantasy meets reality in a visually stunning, heartwarming, and empowering adventure. Directed by Greta Gerwig, this film brings Margot Robbie as Barbie and Ryan Gosling as Ken to life in a whimsical journey of self-discovery, humor, and nostalgia.</p>
         <img src="images/bttf.webp" alt="Barbie Movie">
 
         <h2>About the Movie</h2>
         <p>Barbie has always lived in Barbieland, a perfect pink paradise where everything is flawless—until she starts questioning her reality. Facing existential questions, she ventures into the real world alongside Ken, encountering challenges, surprises, and new perspectives along the way.</p>
+        <img src="images/bttf2.png" alt="Barbie The Movie">
 
         <h3>Meet the Cast</h3>
         <ul>
@@ -34,8 +36,8 @@
         <h3>A Story for All Generations</h3>
         <p>The Barbie Movie isn’t just about fun and fashion—it’s a celebration of individuality, diversity, and self-empowerment. Whether you grew up playing with Barbie or are discovering her for the first time, this movie reminds us that you can be anything you want to be.</p>
     </main>
-    <footer>
-        &copy; 2025 Barbie Movie Project Page
+    <hr>
+    <footer>&copy; 2025 Barbie Movie Project Page
     </footer>
 </div> 
 </body>
