--- a/responsive/index.html
+++ b/responsive/index.html
@@ -23,7 +23,7 @@
     </nav>
     <hr>
     <main id="multi_col">
-        <section id="col">
+        <section class="col">
         <h1 class="heading_style">Welcome to the World of Barbie!</h1>
         <p>Step into the vibrant and dazzling world of the Barbie Movie, where fantasy meets reality in a visually stunning, heartwarming, and empowering adventure. Directed by Greta Gerwig, this film brings Margot Robbie as Barbie and Ryan Gosling as Ken to life in a whimsical journey of self-discovery, humor, and nostalgia.</p>
         <img class="movie_post" src="images/bttf.webp" alt="Barbie Movie">
