--- a/page.5/index.html
+++ b/page.5/index.html
@@ -23,7 +23,7 @@
     </nav>
     <hr>
     <main id="multi_col">
-        <section id="col">
+        <section class="col">
         <h1 class="heading_style">Welcome to the World of Barbie!</h1>
         <p>Step into the vibrant and dazzling world of the Barbie Movie, where fantasy meets reality in a visually stunning, heartwarming, and empowering adventure. Directed by Greta Gerwig, this film brings Margot Robbie as Barbie and Ryan Gosling as Ken to life in a whimsical journey of self-discovery, humor, and nostalgia.</p>
         <img class="movie_post" src="images/bttf.webp" alt="Barbie Movie">
@@ -31,7 +31,7 @@
         <h2 class="heading_style">About the Movie</h2>
         <p>Barbie has always lived in Barbieland, a perfect pink paradise where everything is flawless—until she starts questioning her reality. Facing existential questions, she ventures into the real world alongside Ken, encountering challenges, surprises, and new perspectives along the way.</p>
     </section>
-        <aside id="col">
+        <aside class="col">
             <img class="movie_post"  src="images/bttf2.png" alt="Barbie The Movie">
 
         <h3 class="heading_style">Meet the Cast</h3>
